--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
@@ -156,23 +156,7 @@
             </nav>
 
             <!--        modal confirm delete -->
-            <div class="modal fade text-center" id="confirmDialog">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Delete Confirmation</h4>
-                            <button type="button" class="btn-close"  data-bs-dismiss="modal" ></button>
-                        </div>
-                        <div class="modal-body">
-                            <p id="confirmText"></p>
-                        </div>
-                        <div class="modal-footer">
-                            <a  class="btn btn-success" href="" id="confirmButton">Yes</a>
-                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div th:replace="modal_fragments :: confirm_modal" />
 
         </div>
 
