--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/categories.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/categories.html
@@ -74,6 +74,29 @@
                 </tbody>
             </table>
         </div>
+        <!--        pagination-->
+        <div class="text-center m-1">
+            <span>Showing top-level category number # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+        </div>
+        <nav>
+            <ul class="pagination justify-content-center flex-wrap">
+                <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}">
+                    <a class="page-link" th:href="@{'/categories/page/1?sortField=' + ${sortField}+  '&sortDir=' + ${sortDir}}">First</a>
+                </li>
+                <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}">
+                    <a class="page-link" th:href="@{'/categories/page/' + ${currentPage - 1} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">Previous</a>
+                </li>
+
+
+                <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" th:each = "i : ${#numbers.sequence(1,totalPages)}">
+                    <a class="page-link" th:href="@{'/categories/page/' + ${i} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+                </li>
+
+                <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/categories/page/' + ${currentPage+ 1} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">Next</a></li>
+                <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/categories/page/' + ${totalPages} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}" >Last</a></li>
+
+            </ul>
+        </nav>
 
         <div th:replace="modal_fragments :: confirm_modal" />
 
