--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
@@ -163,6 +163,8 @@
         <div th:replace="fragments :: footer"></div>
 
 <script type="text/javascript">
+    moduleURL = "[[@{/users}]]";
+
     $(document).ready(function (){
         $(".link-delete").on("click" , function(e){
             e.preventDefault();
