--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 
 
        <div class="my-3">
-           <img th:src="@{/images/ShopmeAdminBig.png}">
+           <img th:src="@{/images/ShopmeAdminBig.png}" alt="Shopme Admin">
        </div>
 
 
