--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/account_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/account_form.html
@@ -90,8 +90,8 @@
         </div>
     <!--    footer-->
         <div th:replace="fragments :: footer"></div>
-        <script>
-
+    <script type="text/javascript">
+        moduleURL = "[[@{/}]]";
        $(document).ready(function(){
            // code validate password match
             const passwordBox = $("#password");
@@ -150,25 +150,11 @@
             window.location = "[[@{/}]]"
         })
 
-    // validate file size
-        $("#fileImage").change(function (){
-            const file = this.files[0];
-            const fileSize = this.files[0].size;
-            if(fileSize > 1048576){
-                this.setCustomValidity("You must choose an image less than 1 MB");
-                this.reportValidity();
-            } else {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    $("#thumbnail").attr("src" , e.target.result);
-                }
-                reader.readAsDataURL(file);
-            }
-        })
 
 
 
     </script>
+<script th:src="@{/js/common-form.js}"></script>
 </body>
 </html>
 
