--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
@@ -111,21 +111,6 @@
         window.location = "[[@{/users}]]"
     })
 
-// validate file size
-    $("#fileImage").change(function (){
-        const file = this.files[0];
-        const fileSize = this.files[0].size;
-        if(fileSize > 1048576){
-            this.setCustomValidity("You must choose an image less than 1 MB");
-            this.reportValidity();
-        } else {
-            const reader = new FileReader();
-            reader.onload = function (e) {
-                $("#thumbnail").attr("src" , e.target.result);
-            }
-            reader.readAsDataURL(file);
-        }
-    })
 
     function checkEmailUnique(form){
         url = "[[@{/users/check_email}]]";
@@ -152,16 +137,9 @@
         return false;
     }
 
-    function showModalDialog(title , message){
-        $("#modalTitle").text(title);
-        $("#modalBody").text(message);
-        // khoi tao 1 modal dialog
-        var modal = new bootstrap.Modal($("#modalDialog") , {});
-        modal.show();
-    }
-
 
 </script>
+<script th:src="@{/js/common-form.js}"></script>
 </body>
 </html>
 
