--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
@@ -10,60 +10,22 @@
             <h2>Manage Users</h2>
             <a class="fas fa-folder-plus btn btn-primary p-2 my-2" th:href="@{/users/new}"></a>
 
-            <div th:replace="fragments :: search_form('/users/page/1')"></div>
+            <div th:replace="fragments :: search_form_and_message('/users/page/1')"></div>
 
-            <div th:if="${message != null}" class="alert alert-success text-center" id="messageBlock">
-                [[${message}]]
-            </div>
 
             <div class="full-details">
                 <table class="table table-responsive-xl table-bordered table-striped table-hover">
                     <thead class="table-dark">
                     <tr>
-                        <th class="text-center ">
-                            <a class="text-white text-decoration-none" th:if="${sortField != 'id' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=id' +'&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >User Id</a>
-                            <a class="text-white text-decoration-none" th:if="${sortField == 'id' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=id' +'&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword='+ keyword : ''}}" >User Id</a>
-                            <span th:if = "${sortField == 'id'}"
-                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
-                        </th>
+                        <th  th:replace="fragments::column_link('/users','id' , 'User ID')"></th>
                         <th class="text-center">
                             Photos
                         </th>
-                        <th class="text-center">
-                            <a class="text-white text-decoration-none" th:if="${sortField != 'email' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=email' +'&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >Email</a>
-                            <a class="text-white text-decoration-none" th:if="${sortField == 'email' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=email' +'&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >Email</a>
-                            <span th:if = "${sortField == 'email'}"
-                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
-                        </th>
-                        <th class="text-center">
-                            <a class="text-white text-decoration-none" th:if="${sortField != 'firstName' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=firstName' +'&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >First Name</a>
-                            <a class="text-white text-decoration-none" th:if="${sortField == 'firstName' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=firstName' +'&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >First Name</a>
-                            <span th:if = "${sortField == 'firstName'}"
-                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
-                        </th>
-                        <th class="text-center">
-                            <a class="text-white text-decoration-none" th:if="${sortField != 'lastName' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=lastName' +'&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >Last Name</a>
-                            <a class="text-white text-decoration-none" th:if="${sortField == 'lastName' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=lastName' +'&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >Last Name</a>
-                            <span th:if = "${sortField == 'lastName'}"
-                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
-                        </th>
+                        <th th:replace="fragments::column_link('/users','email' , 'Email')"></th>
+                        <th th:replace="fragments::column_link('/users','firstName' , 'First Name')"></th>
+                        <th th:replace="fragments::column_link('/users','lastName' , 'Last Name')"></th>
                         <th class="text-center">Roles</th>
-                        <th class="text-center">
-                            <a class="text-white text-decoration-none" th:if="${sortField != 'enabled' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=enabled' +'&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >Enabled</a>
-                            <a class="text-white text-decoration-none" th:if="${sortField == 'enabled' }"
-                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=enabled' +'&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >Enabled</a>
-                            <span th:if = "${sortField == 'enabled'}"
-                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
-                        </th>
+                        <th th:replace="fragments::column_link('/users','enabled' , 'Enabled')"></th>
                         <th class="text-center"></th>
                     </tr>
                     </thead>
@@ -79,18 +41,11 @@
                         <td>[[${user.lastName}]]</td>
                         <td>[[${user.roles}]]</td>
                         <td class="text-center">
-                            <a th:if="${user.enabled == true }" class="fa-sharp fa-solid fa-circle-check fa-2x icon-green "
-                               th:href="@{'/users/' + ${user.id} + '/enabled/false'}" title="Disable this user"></a>
-                            <a th:if="${user.enabled == false }" class="fa-sharp fa-solid fa-circle fa-2x icon-gray"
-                               th:href="@{'/users/' + ${user.id} + '/enabled/true'}" title="Enable this user"></a>
-
+                            <div th:replace="fragments :: status(${user.enabled}, 'user', '/users/' + ${user.id})" />
                         </td>
                         <td class="text-center">
-                            <a class="fa-solid fa-pen-to-square fa-2x icon-green" th:href="@{'/users/edit/' + ${user.id}}" title="Edit this user"></a>
-                            <a class="fa-sharp fa-solid fa-trash fa-2x icon-gray link-delete"
-                               th:userId = "${user.id}"
-                               th:href="@{'/users/delete/' + ${user.id}}"
-                               title="Delete this user"></a>
+                            <div th:replace="fragments :: edit('user', '/users/edit/' + ${user.id})" />
+                            <div th:replace="fragments :: delete('user', ${user.id}, '/users/delete/' + ${user.id}, true)" />
                         </td>
                     </tr>
                     </tbody>
@@ -125,24 +80,7 @@
             </div>
 
             <!--        pagination-->
-            <div class="text-center m-1">
-                <span>Showing user number # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
-            </div>
-            <nav>
-                <ul class="pagination justify-content-center flex-wrap">
-                    <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/1?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">First</a></li>
-                    <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage - 1} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">Previous</a></li>
-
-
-                    <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" th:each = "i : ${#numbers.sequence(1,totalPages)}">
-                        <a class="page-link" th:href="@{'/users/page/' + ${i} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-                    </li>
-
-                    <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage+ 1} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">Next</a></li>
-                    <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${totalPages} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}" >Last</a></li>
-
-                </ul>
-            </nav>
+            <div th:replace="fragments :: pagination('/users', 'users')"></div>
 
             <!--        modal confirm delete -->
             <div th:replace="modal_fragments :: confirm_modal" />
@@ -150,30 +88,17 @@
         </div>
 
         <div th:replace="fragments :: footer"></div>
-
+<script th:src="@{/js/common_list.js}"></script>
 <script type="text/javascript">
     moduleURL = "[[@{/users}]]";
 
-    $(document).ready(function (){
-        $(".link-delete").on("click" , function(e){
+    $(document).ready(function() {
+        $(".link-delete").on("click", function(e) {
             e.preventDefault();
-            userId = $(this).attr("userId")
-            $("#confirmText").text("Are you sure want to delete this user with id : " + userId);
-
-            // set href yes button to delete user url
-            $("#confirmButton").attr("href" , $(this).attr("href"));
-
-            var modal = new bootstrap.Modal($("#confirmDialog") , {});
-            modal.show();
-        })
-
-        if($("#messageBlock")){
-            setTimeout(() =>{
-                const el = $("#messageBlock");
-                el.css("display", "none");
-            },3000);
-        }
-    })
+            showDeleteConfirmModal($(this), 'user');
+            console.log($(this));
+        });
+    });
 
     function clearFilter(){
         window.location = "[[@{/users/}]]";
