code brand module

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -26,8 +26,8 @@
 <!--paging-->
 <a th:fragment="page_link(moduleURL, pageNum, label)"
    class="page-link"
-   th:href="@{${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">[[${label}]]
-</a>
+   th:href="@{${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}"
+>[[${label}]]</a>
 
 
 
