--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_overview.html
@@ -54,14 +54,14 @@
 	<div class="input-group row p-2">
 		<label class="col-sm-2 col-form-label">Cost:</label>
 		<div class="col-sm-10">
-			<input type="number" class="form-control" th:field="*{cost}"/>
+			<input type="number" step="0.01" class="form-control" th:field="*{cost}"/>
 		</div>
 	</div>
 	
 	<div class="input-group row p-2">
 		<label class="col-sm-2 col-form-label">Price:</label>
 		<div class="col-sm-10">
-			<input type="number" class="form-control" th:field="*{price}"/>
+			<input type="number" step="0.01" class="form-control" th:field="*{price}"/>
 		</div>
 	</div>
 	
