admin update enable status product

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_form.html
@@ -9,7 +9,7 @@
 	</div>
 			
 	<form th:action="@{/products/save}" method="post"
-		th:object="${product}">
+		th:object="${product}" onsubmit="return checkUnique(this)">
 		<input type="hidden" th:field="*{id}" />
 	<div>
 		<ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -60,7 +60,7 @@
 </body>
 <script type="text/javascript">
 	moduleURL = "[[@{/products}]]";
-	 brandModuleURL = "[[@{/brands}]]";
+	brandModuleURL = "[[@{/brands}]]";
 
 	dropdownBrands = $("#brand");
 	dropdownCategories = $("#category");
@@ -79,8 +79,8 @@
 
 
 	function getCategories() {
-		brandId = dropdownBrands.val();
-		url = brandModuleURL + "/" + brandId + "/categories";
+		const brandId = dropdownBrands.val();
+		const url = brandModuleURL + "/" + brandId + "/categories";
 
 		$.get(url, function(responseJson) {
 			// console.log(responseJson);
@@ -88,6 +88,31 @@
 				$("<option>").val(category.id).text(category.name).appendTo(dropdownCategories);
 			});
 		});
+	}
+	function checkUnique(form) {
+		const productId = $("#id").val();
+		const productName = $("#name").val();
+
+		const csrfValue = $("input[name='_csrf']").val();
+
+		const url = "[[@{/products/check_unique}]]";
+
+		const params = {id: productId, name: productName, _csrf: csrfValue};
+
+		$.post(url, params, function(response) {
+			if (response === "OK") {
+				form.submit();
+			} else if (response === "Duplicate") {
+				showModalDialog( "Warning ","There is another product having the name " + productName);
+			} else {
+				showModalDialog( "Error","Unknown response from server");
+			}
+
+		}).fail(function() {
+			showModalDialog("Error","Could not connect to the server");
+		});
+
+		return false;
 	}
 </script>
 <script th:src="@{/js/common-form.js}"></script>
