--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_form.html
@@ -41,7 +41,14 @@
 			<div class="tab-pane" id="images" role="tabpanel">
 				<div th:replace="products/product_images :: content"></div>
 			</div>
-				<div class="tab-pane" id="details" role="tabpanel">Details</div>
+			<div class="tab-pane p-3" id="details" role="tabpanel">
+				<div th:replace="products/product_details :: content"></div>
+				<div>
+					<input type="button" class="btn btn-secondary" value="Add More Detail"
+						   onclick="addNextDetailSection()" />
+				</div>
+
+			</div>
 			<div class="tab-pane p-3" id="shipping" role="tabpanel">
 				<div th:replace="products/product_shipping :: content"></div>
 			</div>
@@ -69,6 +76,9 @@
 
 </script>
 <script th:src="@{/js/common-form.js}"></script>
-<script th:src="@{/js/product_form.js}"></script>
+<script th:src="@{/js/product_form_images.js}"></script>
+<script th:src="@{/js/product_form_overview.js}"></script>
+<script th:src="@{/js/product_form_details.js}"></script>
+
 
 </html>
