--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_form.html
@@ -12,6 +12,8 @@
 		  enctype="multipart/form-data"
 		th:object="${product}" onsubmit="return checkUnique(this)">
 		<input type="hidden" th:field="*{id}" />
+		<input th:if="${product.category != null}" type="hidden"
+			   id="categoryId" th:value="${product.category.id}" />
 	<div>
 		<ul class="nav nav-tabs" id="myTab" role="tablist">
 			<li class="nav-item" role="presentation">
