--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -20,7 +20,7 @@
 <!--column link in table-->
 <th class="text-center " th:fragment="column_link(moduleURL ,fieldName , columnLabel)">
     <a class="text-white text-decoration-none"
-       th:href = "@{ ${moduleURL} + '/page/' + ${currentPage} + '/?sortField=' + ${fieldName} +'&sortDir=' + ${sortField != fieldName ? sortDir  : reverseSortDir} + ${keyword != null ? '&keyword='+ keyword: ''}}" >[[${columnLabel}]]</a>
+       th:href = "@{ ${moduleURL} + '/page/' + ${currentPage} + '/?sortField=' + ${fieldName} +'&sortDir=' + ${sortField != fieldName ? sortDir  : reverseSortDir} + ${keyword != null ? '&keyword='+ keyword: ''} + ${categoryId != null ? '&categoryId=' + categoryId : ''}}" >[[${columnLabel}]]</a>
     <span th:if = "${sortField == fieldName}"
           th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
 </th>
@@ -28,7 +28,7 @@
 <!--paging-->
 <a th:fragment="page_link(moduleURL, pageNum, label)"
    class="page-link"
-   th:href="@{${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}"
+   th:href="@{${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : '' } + ${categoryId != null ? '&categoryId=' + categoryId : ''}}"
 >[[${label}]]</a>
 
 
