--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/products.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/products.html
@@ -1,28 +1,60 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:replace="fragments :: page_head('Products - Shopme Admin')"></head>
 <body class="d-flex flex-column h-100">
 <!--navigation-->
 <div th:replace="navigation :: menu"></div>
 <div class="container-fluid">
 	<div>
-		<h2>Manage Products</h2>	
-		
+		<h2>Manage Products</h2>
+		<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
 		<a th:href="@{/products/new}" class="fas fa-folder-plus btn btn-primary p-2 my-2"></a>
+		</th:block>
 	</div>
-		
-	<div th:replace="fragments :: search_form_and_message('/products/page/1')"></div>
+
+	<div>
+		<form th:action="@{/products/page/1}" class="d-flex flex-row align-items-center flex-wrap  m-3" id="searchForm">
+			<input type="hidden" name="sortField" th:value="${sortField}" />
+			<input type="hidden" name="sortDir" th:value="${sortDir}" />
+
+			Category:&nbsp;
+			<select class="form-control w-auto d-inline-block" name="categoryId" id="dropdownCategory">
+				<option value="0">All Categories</option>
+
+				<th:block th:each="cat : ${listCategories}">
+					<option th:value="${cat.id}" th:selected="(${categoryId} == ${cat.id})">[[${cat.name}]]</option>
+				</th:block>
+			</select>
+
+			&nbsp;Filter:&nbsp;
+			<input type="search" name="keyword" th:value="${keyword}" class="form-control w-auto d-inline-block" required/>
+			&nbsp;&nbsp;
+			<button type="submit" class="btn btn-primary">
+				<i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+			</button>
+			&nbsp;&nbsp;
+			<button type="button" class="btn btn-secondary" onclick="clearFilter()">
+				<i class="fa-solid fa-delete-left"></i>
+			</button>
+		</form>
+
+		<div th:if="${message != null}" class="alert alert-success text-center">
+			[[${message}]]
+		</div>
+	</div>
 	
 	<div class="full-details">
 		<table class="table table-bordered table-striped table-hover table-responsive-xl">
 			<thead class="table-dark">
 				<tr>
-					<th>ID</th>
+					<th th:replace="fragments::column_link('/products','id' , 'ID')"></th>
 					<th>Main Image</th>
-					<th>Product Name</th>
-					<th>Brand</th>
-					<th>Category</th>
-					<th>Enabled</th>
+					<th th:replace="fragments::column_link('/products','name' , 'Product Name')"></th>
+					<th th:replace="fragments::column_link('/products','brand' , 'Brand')"></th>
+					<th th:replace="fragments::column_link('/products','category' , 'Category')"></th>
+					<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+						<th>Enabled</th>
+					</th:block>
 					<th></th>
 				</tr>								
 			</thead>
@@ -36,21 +68,30 @@
 						<a class="link-detail"
 						   th:href="@{'/products/detail/' + ${product.id}}"
 						   title="View details of this product"
-					>[[${product.name}]]</a>
+					>[[${product.shortName}]]</a>
 					</td>
 					<td>[[${product.brand.name}]]</td>
 					<td>[[${product.category.name}]]</td>
+
+					<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
 					<td>
 						<div th:replace="fragments :: status(${product.enabled}, 'product', '/products/' + ${product.id})"></div>
 					</td>
+					</th:block>
 					<td>
 						<a class="fas fa-file-alt fa-2x icon-green link-detail"
 							th:href="@{'/products/detail/' + ${product.id}}"
 							title="View details of this product"></a>
-						&nbsp; 	
-						<div th:replace="fragments :: edit('product', '/products/edit/' + ${product.id})"></div>
-						&nbsp; 
-						<div th:replace="fragments :: delete('product', ${product.id}, '/products/delete/' + ${product.id}, true)"></div>
+						&nbsp;
+						<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor','Salesperson')">
+							<div th:replace="fragments :: edit('product', '/products/edit/' + ${product.id})"></div>
+						</th:block>
+
+						&nbsp;
+						<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+							<div th:replace="fragments :: delete('product', ${product.id}, '/products/delete/' + ${product.id}, true)"></div>
+						</th:block>
+
 					</td>					
 				</tr>
 			</tbody>
@@ -69,6 +110,8 @@
 	</div>
 </div>
 
+<div th:replace="fragments :: pagination('/products', 'products')"></div>
+
 <div th:replace="fragments :: footer"></div>
 
 </body>
@@ -86,6 +129,10 @@
 			e.preventDefault();
 			let linkDetailURL = $(this).attr("href");
 			$("#detailModal").modal("show").find(".modal-content").load(linkDetailURL);
+		});
+
+		$("#dropdownCategory").on("change", function() {
+			$("#searchForm").submit();
 		});
 	});
 </script>
