--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome to Shopme</title>
-</head>
-<body>
-    <h1>Welcome to Shopme</h1>
+<!DOCTYPE html >
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace = "fragments :: page_head('Shopme')"></head>
+<body class="d-flex flex-column h-100">
+    <div th:replace="navigation :: header_menu"></div>
+    <div class="container-fluid">
+        <div>
+            <h1>Shopping by categories</h1>
+        </div>
+        <div class="row">
+            <div class="col" th:each="cat : ${listCategories}">
+                <div>
+                    <img th:src="@{${cat.imagePath}}" width="80"  alt="Category Image"/>
+                </div>
+                <div>
+                    <a th:href="@{'/c/' + ${cat.alias}}">[[${cat.name}]]</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <div th:replace="navigation :: footer_menu"></div>
 </body>
 </html>
