code shopme application product detail page

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/products_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/products_by_category.html
@@ -11,7 +11,7 @@
 				<nav>
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item ">
-							<a class="text-decoration-none" th:href="@{/}">Home</a>
+							<a class="text-decoration-none" th:href="@{/static}">Home</a>
 						</li>
 <!--						list breadcrumb of parent category-->
 						<th:block th:each="parent : ${listCategoryParents}">
