code shopme application search product

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 
 <!--navigation-->
     <div th:replace="navigation :: menu"></div>
+    <div th:replace="navigation :: search_nav"></div>
 
     <div class="container-fluid">
         <div>
