--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/product_detail.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container-fluid">
 	<div th:replace="navigation :: header_menu"></div>
-	
+	<div th:replace="navigation :: search_nav"></div>
 	<div th:replace="breadcrumb :: content"></div>
 
 	<div class="row">
@@ -74,6 +74,7 @@
 <!--detail -->
 	<div class="row">
 		<div class="col-12">
+			<div><hr/></div>
 			<div>
 				<h3>Product Details:</h3>
 			</div>
