--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
@@ -6,7 +6,7 @@
     <a class="navbar-brand" th:href="@{/}">
       <img th:src="@{/images/ShopmeAdminSmall.png}">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="collapeibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar , #searchNavbar" aria-controls="collapeibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="topNavbar">
@@ -37,6 +37,21 @@
   </nav>
 
 </div>
+<div th:fragment="search_nav" class="row">
+  <div class="col-md">
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="collapse navbar-collapse" id="searchNavbar">
+        <form class="d-flex flex-row align-items-center ms-1" th:action="@{/search}" method="get">
+          <input type="search" name="keyword" class="form-control me-2"
+                 th:value="${keyword}"
+                 placeholder="keyword" required />
+          <input type="submit" value="Search" class="btn btn-outline-success" />
+        </form>
+      </div>
+    </nav>
+  </div>
+</div>
+
 <div th:fragment="footer_menu">
   <div>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
