--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/products_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/products_by_category.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container-fluid">
 	<div th:replace="navigation :: header_menu"></div>
-	
+	<div th:replace="navigation :: search_nav"></div>
 	<div th:if="${listCategoryParents != null && !listCategoryParents.isEmpty()}">
 		<div class="row">
 			<div class="col">
@@ -40,26 +40,7 @@
 	
 	<div class="row">
 		<th:block th:each="product : ${listProducts}">
-		<div class="col">
-			<div>
-				<a th:href="@{'/p/' + ${product.alias}}">
-					<img th:src="@{${product.mainImagePath}}" style="width: 150px"  alt="Product Image"/>
-					<br/>
-					<b>[[${product.shortName}]]</b>
-				</a>
-
-			</div>
-			<div th:if="${product.discountPercent <= 0}">
-				<span>$ [[${product.price}]]</span>
-			</div>
-			<div th:if="${product.discountPercent > 0}">
-				<span style="font-size: larger; color: darkred">$ [[${product.discountPrice}]]</span>
-				<del>
-					<span>$ [[${product.price}]]</span>
-				</del>
-			</div>
-						
-		</div>
+			<div th:replace="product/product_fragment :: content"></div>
 		</th:block>
 	</div>
 	
