admin shopme backend manage setting

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head th:replace = "fragments :: page_head('Shopme')"></head>
 <body class="d-flex flex-column h-100">
     <div th:replace="navigation :: header_menu"></div>
+    <div th:replace="navigation :: search_nav"></div>
     <div class="container-fluid">
         <div>
             <h1>Shopping by categories</h1>
