--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/settings.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/settings.html
@@ -15,31 +15,31 @@
 	<div>
 		<ul class="nav nav-tabs" id="settingTab" role="tablist">
 		  <li class="nav-item">
-		    <a class="nav-link active" data-toggle="tab" href="#general" role="tab">General</a>
+		    <a class="nav-link active" data-bs-toggle="tab" href="#general" role="tab">General</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" data-toggle="tab" href="#countries" role="tab">Countries</a>
+		    <a class="nav-link" data-bs-toggle="tab" href="#countries" role="tab">Countries</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" data-toggle="tab" href="#states" role="tab">States</a>
+		    <a class="nav-link" data-bs-toggle="tab" href="#states" role="tab">States</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" data-toggle="tab" href="#mailServer" role="tab">Mail Server</a>
+		    <a class="nav-link" data-bs-toggle="tab" href="#mailServer" role="tab">Mail Server</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" data-toggle="tab" href="#mailTemplate" role="tab">Mail Templates</a>
+		    <a class="nav-link" data-bs-toggle="tab" href="#mailTemplate" role="tab">Mail Templates</a>
 		  </li>		  
 		</ul>
 		
 		<div class="tab-content">
 		  <div class="tab-pane active p-3" id="general" role="tabpanel">
-		  	<div th:replace="settings/general :: content" />
+			  <div th:replace="settings/general :: content"></div>
 		  </div>
-		  <div class="tab-pane" id="countries" role="tabpanel">
-			<h2>Countries</h2>
+		  <div class="tab-pane p-3" id="countries" role="tabpanel">
+			  <div th:replace="settings/countries :: content"></div>
 		  </div>
-		  <div class="tab-pane" id="states" role="tabpanel">
-			<h2>States</h2>
+		  <div class="tab-pane p-3" id="states" role="tabpanel">
+			  <div th:replace="settings/states :: content"></div>
 		  </div>
 		  <div class="tab-pane p-3" id="mailServer" role="tabpanel">
 			<h2>Mail Server</h2>
@@ -53,10 +53,25 @@
 
 
 </div>
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+	<div class="toast justify-content-center hide" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="3000" data-bs-animation="true">
+		<div role="alert" aria-live="assertive" aria-atomic="true">
+			<div class="toast-body">
+				<span id="toastMessage"></span>
+			</div>
+		</div>
+	</div>
+</div>
 <div th:replace="fragments :: footer"></div>
 </body>
 <script type="text/javascript">
 	MAX_FILE_SIZE = 102400; // 100KB
+	contextPath = "[[@{/}]]";
+	let csrfHeaderName = "[[${_csrf.headerName}]]";
+	let csrfValue = "[[${_csrf.token}]]";
+
 </script>
 <script th:src="@{/js/common-form.js}"></script>
+<script th:src="@{/js/countries_setting.js}"></script>
+<script th:src="@{/js/states_setting.js}"></script>
 </html>
