--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragments.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
 
-	<title>[[${title}]]</title>
+	<title>[[${title}]] - [[${SITE_NAME}]]</title>
 
 	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.2/css/bootstrap.min.css}">
 	<script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
