--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
@@ -4,7 +4,7 @@
 <div th:fragment="header_menu">
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <a class="navbar-brand" th:href="@{/}">
-      <img th:src="@{/images/ShopmeAdminSmall.png}">
+      <img th:src="@{${SITE_LOGO}}">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar , #searchNavbar" aria-controls="collapeibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
     </nav>
   </div>
   <div th:fragment="footer" class="text-center m-3">
-    <p>Shopme - Copyright &copy; Shopme Ltd.</p>
+    <p>[[${COPYRIGHT}]]</p>
   </div>
 </div>
 </body>
