--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/product_detail.html
@@ -35,14 +35,14 @@
 			</div>
 			<div>
 				List Price:
-				<span th:if="${product.discountPercent <= 0}">$[[${product.price}]]</span>
+				<span th:if="${product.discountPercent <= 0}">[[${CURRENCY_SYMBOL}]] [[${product.price}]]</span>
 				<del th:if="${product.discountPercent > 0}">
-					<span>$ [[${product.price}]]</span>
+					<span>[[${CURRENCY_SYMBOL}]] [[${product.price}]]</span>
 				</del>
 			</div>
 			<div th:if="${product.discountPercent > 0}">
 				Price:
-				<span style="font-size: larger; color: darkred">$ [[${product.discountPrice}]]</span>
+				<span style="font-size: larger; color: darkred">[[${CURRENCY_SYMBOL}]] [[${product.discountPrice}]]</span>
 				([[${product.discountPercent}]] % off)
 			</div>
 			<div th:utext="${product.shortDescription}"></div>
