code customer registration form

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/user_form.html
@@ -113,11 +113,11 @@
 
 
     function checkEmailUnique(form){
-        url = "[[@{/users/check_email}]]";
-        userEmail = $("#emailInput").val();
+        let url = "[[@{/users/check_email}]]";
+        let userEmail = $("#emailInput").val();
         csrfValue = $("input[name= '_csrf']").val();
-        userId = $("#userId").val();
-        data = {
+        let userId = $("#userId").val();
+        let data = {
             id: userId,
             email: userEmail,
             _csrf : csrfValue
