--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
@@ -83,7 +83,7 @@
             <div th:replace="fragments :: pagination('/users', 'users')"></div>
 
             <!--        modal confirm delete -->
-            <div th:replace="modal_fragments :: confirm_modal" />
+            <div th:replace="modal_fragments :: confirm_modal"></div>
 
         </div>
 
